--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "license": "ISC",
   "author": "hardzal",
   "main": "src/index.ts",
+  "prisma": {
+    "seed": "ts-node prisma/seeds/seed.ts"
+  },
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "npx tsc --noEmit && node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
     "lint": "eslint --fix",
