--- a/package.json
+++ b/package.json
@@ -14,27 +14,34 @@
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky",
+    "swagger": "ts-node swagger/swagger.ts",
     "lint": "eslint --fix",
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.12.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "concurrently": "^9.1.2",
@@ -47,6 +54,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.5.0",
     "prisma": "^6.3.1",
+    "swagger-autogen": "^2.23.7",
     "ts-node": "^10.9.2",
     "tsx": "^3.12.10",
     "typescript": "^5.7.3",
