--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "rate-limit-redis": "^4.2.0",
+    "streamifier": "^0.1.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.12.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/streamifier": "^0.1.2",
     "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
