--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prepare": "husky",
     "swagger": "ts-node swagger/swagger.ts",
     "lint": "eslint --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "postinstall": "npx prisma generate && npx prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
